--- a/app/src/main/res/layout/layout_item_profile.xml
+++ b/app/src/main/res/layout/layout_item_profile.xml
@@ -25,7 +25,8 @@
         android:paddingLeft="5dp"
         android:text="Change Profile"
         android:textSize="12sp"
-        android:textStyle="italic"
+        android:fontFamily="@font/kufam_italic"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/imgIcon"
         app:layout_constraintStart_toEndOf="@+id/imgIcon"
         app:layout_constraintTop_toTopOf="@+id/imgIcon"
