--- a/app/src/main/res/layout/privacy_policy.xml
+++ b/app/src/main/res/layout/privacy_policy.xml
@@ -65,6 +65,7 @@
                 android:layout_marginHorizontal="36dp"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="GetGo is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect your personal information."
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="1. Information We Collect"
+                android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/textView28" />
@@ -88,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="Personal Information: "
+                android:textColor="#000000"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView29"
                 app:layout_constraintTop_toBottomOf="@+id/textView29" />
@@ -97,6 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="Name, email address, phone number, and payment information."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -109,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="Location Information: "
+                android:textColor="#000000"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView30"
                 app:layout_constraintTop_toBottomOf="@+id/textView31" />
@@ -118,6 +123,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="GPS data from your device to provide personalized travel recommendations."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -130,6 +136,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="Usage Information "
+                android:textColor="#000000"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView32"
                 app:layout_constraintTop_toBottomOf="@+id/textView33" />
@@ -139,6 +146,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="Data about how you use our application, including itineraries and places of interest."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -150,6 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="2. How We Use Information"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/textView34"
@@ -160,6 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="Provide Service: "
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView36"
@@ -170,6 +180,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="To create personalized travel itineraries tailored to your preferences and budget."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -180,6 +191,7 @@
                 android:id="@+id/textView39"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:fontFamily="@font/kufam_bold"
                 android:text="Improve Service: "
                 android:textSize="13sp"
@@ -191,6 +203,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="To analyze and enhance the features of the application."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -202,6 +215,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="Contact: "
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView39"
@@ -211,6 +225,7 @@
                 android:id="@+id/textView41"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:fontFamily="@font/kufam"
                 android:text="To send notifications, updates, and information related to our services."
                 android:textSize="13sp"
@@ -223,6 +238,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="3. Information Sharing"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/textView27"
@@ -234,6 +250,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="With Third Parties: "
+                android:textColor="#000000"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -244,6 +261,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="4. Information Security"
+                android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/textView43"
                 app:layout_constraintTop_toBottomOf="@+id/textView45" />
@@ -253,6 +271,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="We employ reasonable security measures to protect your personal information from loss, misuse, unauthorized access, disclosure, alteration, or destruction."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -263,6 +282,7 @@
                 android:id="@+id/textView42"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:text="We only share your personal information with trusted partners to provide services related to your travel, and only with your consent."
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -274,6 +294,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
                 android:text="Legal Requirements: "
+                android:textColor="#000000"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/textView42" />
@@ -283,6 +304,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="We may disclose your personal information if required by law or to protect our legal rights."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -294,6 +316,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="5. Changes to Policy"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -304,6 +327,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="We may update this Privacy Policy from time to time. We will notify you of changes by posting the new policy on our website. You should check periodically for updates."
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -315,6 +339,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam_bold"
+                android:textColor="#000000"
                 android:text="6. Contact"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -325,6 +350,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kufam"
+                android:textColor="#000000"
                 android:text="If you have any questions about these Terms, please contact us at getgo@gmail.com"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
