--- a/app/src/main/res/layout/activity_list_locations.xml
+++ b/app/src/main/res/layout/activity_list_locations.xml
@@ -1,114 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff">
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/sapa">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="#000000">
 
-    <ImageButton
-        android:id="@+id/imgbtnGoback"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
+<ImageButton
+    android:id="@+id/imgbtnGoback"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginTop="30dp"
+    android:background="@android:color/transparent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/arrow_back" />
 
-    <TextView
-        android:id="@+id/etNameplace"
-        android:layout_width="223dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Hotel/Homestay in Sa Pa"
-        android:fontFamily="@font/kufam_bold"
-        android:textColor="#fff"
-        android:textSize="24sp"
+<TextView
+    android:id="@+id/tvNamePlace"
+    android:layout_width="0dp"
+    android:layout_height="40dp"
+    android:fontFamily="@font/kufam_bold"
+    android:text="Name Place"
+    android:textColor="#fff"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toBottomOf="@+id/imgbtnGoback"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
+    app:layout_constraintTop_toTopOf="@+id/imgbtnGoback" />
+
+    <SearchView
+        android:id="@+id/etSearchLocation"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/semiround_button"
+        android:backgroundTint="#D9D9D9"
+        android:contextClickable="true"
+        android:inputType="text"
+        android:paddingVertical="5dp"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
-        app:layout_constraintTop_toBottomOf="@+id/imgbtnGoback" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNamePlace" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/shape_rectangle"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/etSearchLocation">
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_rectangle"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNameplace"
-        app:layout_constraintVertical_bias="0.172">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="24dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="24dp" />
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tvNewest"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvAll"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="@color/black"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="10dp"
+            android:background="@drawable/background_selector"
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/kufam"
+            android:text="All"
+            android:textColor="@drawable/color_selector"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/tvTrending"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/background_selector"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/kufam"
             android:text="Trending"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tvTopmonth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="10dp"
-            android:text="Top month"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="@+id/tvNewest"
-            app:layout_constraintStart_toEndOf="@+id/tvNewest"
-            app:layout_constraintTop_toTopOf="@+id/tvNewest" />
+            android:textColor="@drawable/color_selector"
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/tvTopyear"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="10dp"
+            android:gravity="center"
+            android:background="@drawable/background_selector"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/kufam"
             android:text="Top year"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="@+id/tvTopmonth"
-            app:layout_constraintStart_toEndOf="@+id/tvTopmonth"
-            app:layout_constraintTop_toTopOf="@+id/tvTopmonth" />
+            android:textColor="@drawable/color_selector"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/tvTrending"
+            app:layout_constraintStart_toEndOf="@+id/tvTrending"
+            app:layout_constraintTop_toTopOf="@+id/tvTrending" />
+    </LinearLayout>
 
-        <ListView
-            android:id="@+id/lvHotel"
-            android:layout_width="wrap_content"
-            android:layout_height="700dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvNewest" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ListView
+        android:id="@+id/lvHotel"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:scrollbars="none"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
