--- a/app/src/main/res/layout/layout_cmt.xml
+++ b/app/src/main/res/layout/layout_cmt.xml
@@ -3,29 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingVertical="20dp">
+    android:layout_height="wrap_content"
+    android:paddingVertical="15dp"
+    android:layout_gravity="center">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="24dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="5dp" />
 
     <ImageView
         android:id="@+id/imgAvatar"
         android:layout_width="29dp"
         android:layout_height="29dp"
         android:background="@drawable/border_gradient"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -34,6 +22,7 @@
         android:layout_height="14dp"
         android:fontFamily="@font/kufam_bold"
         android:text="Yen Vi"
+        android:textColor="#000000"
         android:layout_marginLeft="5dp"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/imgAvatar"
@@ -56,24 +45,8 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="30dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="5dp" />
+        app:layout_constraintTop_toTopOf="parent">
 
         <RatingBar
             style="?android:attr/ratingBarStyleSmall"
@@ -84,18 +57,18 @@
             android:progressTint="#93BC66"
             android:rating="1.7"
             android:stepSize="0.1"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvComment"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:gravity="left"
-            android:paddingLeft="5dp"
             android:text="Awesome place for tourist trying to have a sip of coffee. Authentic taste, quiet with beautiful vintage decorations. Recommended."
-            app:layout_constraintStart_toStartOf="@+id/ratingBarComment"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ratingBarComment" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
