--- a/app/src/main/res/layout/term_of_service.xml
+++ b/app/src/main/res/layout/term_of_service.xml
@@ -64,6 +64,7 @@
             android:layout_marginHorizontal="36dp"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/kufam"
+            android:textColor="#000000"
             android:text="Welcome to GetGo, a travel application utilizing artificial intelligence to provide personalized travel itineraries. By using this application, you agree to comply with the following Terms of Service (hereinafter referred to as Terms). Please read carefully before using our services."
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/kufam_bold"
+            android:textColor="#000000"
             android:text="1. Use of Service"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -86,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Account Registration: "
+        android:textColor="#000000"
         android:fontFamily="@font/kufam_bold"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/textView29"
@@ -95,6 +98,7 @@
         android:id="@+id/textView31"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="You must create an account to use the full features of GetGo. You are responsible for the security of your account."
         android:fontFamily="@font/kufam"
         android:textSize="13sp"
@@ -107,6 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Age Requirement: "
+        android:textColor="#000000"
         android:fontFamily="@font/kufam_bold"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/textView30"
@@ -117,6 +122,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:textSize="13sp"
         android:text="You must be at least 18 years old to use this application or have the consent of a parent or legal guardian."
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -128,6 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:textSize="13sp"
         android:text="Provide Accurate Information: "
         app:layout_constraintStart_toStartOf="@+id/textView32"
@@ -138,6 +145,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:textSize="13sp"
         android:text="You agree to provide accurate and complete information when registering and using our services."
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -150,6 +158,7 @@
         android:layout_height="wrap_content"
         android:text="2. User Rights and Responsibilities"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/textView34"
         app:layout_constraintTop_toBottomOf="@+id/textView35" />
@@ -160,6 +169,7 @@
         android:layout_height="wrap_content"
         android:text="Respect Intellectual Property Rights: "
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/textView36"
         app:layout_constraintTop_toBottomOf="@+id/textView36" />
@@ -169,6 +179,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:textSize="13sp"
         android:text=" You may not copy, modify, distribute, sell, or lease any part of our service or software."
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -180,6 +191,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:text="User Content: "
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/textView37"
@@ -190,6 +202,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:textSize="13sp"
         android:text="You are responsible for any content you upload or create on the application. You agree not to post content that violates the law or the rights of others."
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -201,6 +214,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:text="3. Privacy"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/textView39"
@@ -211,6 +225,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:text="The collection and use of your personal information are governed by our Privacy Policy."
         android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -223,6 +238,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
         android:text="4. Changes to Terms"
+        android:textColor="#000000"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -232,6 +248,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:text="We reserve the right to update these Terms at any time. Changes will take effect immediately upon posting. Your continued use of the service after the changes take effect constitutes your acceptance of the changes."
         android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -242,6 +259,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:text="5. Governing Law"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -252,6 +270,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:text="These Terms are governed by and interpreted in accordance with the laws of the country where GetGo is headquartered."
         android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -262,6 +281,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
+        android:textColor="#000000"
         android:text="6. Contact"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -272,6 +292,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:text="If you have any questions about these Terms, please contact us at getgo@gmail.com"
         android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
