--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -181,7 +181,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/locationRating"
         android:layout_width="20dp"
         android:layout_height="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imgbtnGoback"
@@ -194,9 +194,9 @@
         android:id="@+id/imageView2"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/locationRating"
+        app:layout_constraintStart_toEndOf="@+id/locationRating"
+        app:layout_constraintTop_toTopOf="@+id/locationRating"
         app:srcCompat="@drawable/star_rate" />
     <ImageView
         android:id="@+id/imageView3"
