--- a/app/src/main/res/layout/activity_list_locations.xml
+++ b/app/src/main/res/layout/activity_list_locations.xml
@@ -111,7 +111,7 @@ android:background="#000000">
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lvHotel"
+        android:id="@+id/lvLocation"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
