--- a/app/src/main/res/layout/layout_status_grid.xml
+++ b/app/src/main/res/layout/layout_status_grid.xml
@@ -90,7 +90,7 @@
         app:srcCompat="@drawable/heart_icon" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/reactedUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
